--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "homepage": "https://kattyv.github.io/react-eshop/",
+  "homepage": "https://kattyv.github.io/react-eshop",
   "name": "eshop-api",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -20,6 +22,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
